# sailsprep

./: .autorc  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  pyproject.toml  sailsprep.html  search.js  template_setup.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  development_task.yaml  general.yaml  support_request.yaml
.github/workflows/: docs.yaml  publish.yaml  release.yaml  test.yaml
feature_processing/: config_examples.py  main.py  modular_pipeline.py  requirements.txt
github/ISSUE_TEMPLATE/: bug_report.yaml  development_task.yaml  general.yaml  support_request.yaml
notebooks/: HPE_with_tracking.ipynb  Motion_Appearance_ReID.ipynb  Video_Dates_plots.ipynb  age_det.ipynb  annotation_analysis.ipynb  bytetrack.ipynb  deepsort.ipynb  deepsort_reid.ipynb  dinov3_yolo.ipynb  face-upper-lower.ipynb
sailsprep/: app.html  cli.html
src/: BIDS_convertor.py
src/YOUR_PACKAGE_NAME/: cli.py
src/sailsprep/: app.py  cli.py
src/tests/: test_BIDS_convertor.py  test_app.py
test_video_gps/: gps.ipynb
